--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,14 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-cors": "^0.11.2",
+        "barryvdh/laravel-ide-helper": "^2.5",
+        "doctrine/dbal": "^2.8",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/homestead": "^7.19",
+        "laravel/tinker": "^1.0",
+        "tymon/jwt-auth": "^0.5.12"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
