--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "laravel/framework": "5.7.*",
         "laravel/homestead": "^7.19",
         "laravel/tinker": "^1.0",
+        "predis/predis": "^1.1",
+        "spatie/laravel-permission": "^2.25",
         "tymon/jwt-auth": "^0.5.12"
     },
     "require-dev": {
