--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "barryvdh/laravel-ide-helper": "^2.5",
         "doctrine/dbal": "^2.8",
         "fideloper/proxy": "^4.0",
+        "kyslik/column-sortable": "^5.7",
         "laravel/framework": "5.7.*",
         "laravel/homestead": "^7.19",
         "laravel/tinker": "^1.0",
