--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "predis/predis": "^1.1",
         "spatie/laravel-permission": "^2.25",
         "tucker-eric/eloquentfilter": "^1.3",
-        "tymon/jwt-auth": "^1.0"
+        "tymon/jwt-auth": "^1.0",
+        "ext-json": "*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
