--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
         "vue-template-compiler": "^2.5.21"
     },
     "dependencies": {
+        "axios": "^0.18.0",
         "ts-loader": "^5.3.3",
         "typescript": "^3.2.2",
-        "vue-property-decorator": "^7.3.0"
+        "vue-property-decorator": "^7.3.0",
+        "vuex": "^3.0.1",
+        "vuex-module-decorators": "^0.9.7"
     }
 }
