VendorsStore actions, Mutations

--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,10 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
+        ],
+        "post-update-cmd": [
+            "php artisan ide-helper:meta",
+            "php artisan ide-helper:generate"
         ]
     },
     "config": {
