--- a/.editorconfig
+++ b/.editorconfig
@@ -14,7 +14,7 @@ trim_trailing_whitespace = false
 [*.yml]
 indent_size = 2
 
-[*.ts]
+[{*.ts, *.vue}]
 indent_style = space
 indent_size = 2
 charset = utf-8
