--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     },
     "devDependencies": {
         "browser-sync": "^2.26.3",
-        "browser-sync-webpack-plugin": "^2.0.1",
+        "browser-sync-webpack-plugin": "^2.0.1"
+    },
+    "dependencies": {
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.7",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.5.21"
-    },
-    "dependencies": {
+        "vue-template-compiler": "^2.5.21",
         "axios": "^0.18.0",
         "ts-loader": "^5.3.3",
         "typescript": "^3.2.2",
         "vue-property-decorator": "^7.3.0",
+        "vue-router": "^3.0.2",
         "vuex": "^3.0.1",
         "vuex-module-decorators": "^0.9.7"
     }
