Added dynamic imports

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,3 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/js/app.ff4bb99b225bf84ac690.hot-update.js": "/js/app.ff4bb99b225bf84ac690.hot-update.js",
-    "/js/app.a9daed5824ae78b2a8d3.hot-update.js": "/js/app.a9daed5824ae78b2a8d3.hot-update.js",
-    "/js/app.9e3a2b9761dd60dc0954.hot-update.js": "/js/app.9e3a2b9761dd60dc0954.hot-update.js",
-    "/js/app.617d1bff3ea6f675ef46.hot-update.js": "/js/app.617d1bff3ea6f675ef46.hot-update.js",
-    "/js/app.acba654695ad7df529a9.hot-update.js": "/js/app.acba654695ad7df529a9.hot-update.js"
+    "/js/app.js": "/js/app.js?id=103391655e6d7fd3a164"
 }
