--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
         "browser-sync-webpack-plugin": "^2.0.1"
     },
     "dependencies": {
-        "cross-env": "^5.1",
-        "laravel-mix": "^4.0.7",
-        "resolve-url-loader": "^2.3.1",
+        "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+        "@types/node": "^10.12.18",
+        "axios": "^0.18.0",
+        "compression-webpack-plugin": "^2.0.0",
+        "core-js": "^2.6.2",
+        "cross-env": "^5.2.0",
+        "laravel-mix": "^4.0.13",
+        "resolve-url-loader": "^3.0.0",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.5.21",
-        "axios": "^0.18.0",
         "ts-loader": "^5.3.3",
         "typescript": "^3.2.2",
+        "vue": "^2.5.22",
         "vue-property-decorator": "^7.3.0",
-        "vue-router": "^3.0.2",
+        "vue-router": "3.0.2",
+        "vue-template-compiler": "^2.5.22",
         "vuex": "^3.0.1",
         "vuex-module-decorators": "^0.9.7"
     }
