--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,21 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
         "target": "es2015",
-        "noImplicitThis": true,
-        "sourceMap": true,
-        "removeComments": false,
+        "lib": [
+            "dom",
+            "es2015"
+        ],
+        "module": "esnext",
         "moduleResolution": "node",
-        "strict": true,
-        "experimentalDecorators": true
+        "isolatedModules": false,
+        "experimentalDecorators": true,
+        "noImplicitAny": true,
+        "noImplicitThis": true,
+        "strictNullChecks": true,
+        "removeComments": true,
+        "suppressImplicitAnyIndexErrors": true,
+        "allowSyntheticDefaultImports": true,
+        "strict": true
     },
     "exclude": [
         "node_modules"
