--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
         "sass-loader": "^7.1.0",
         "ts-loader": "^5.3.3",
         "typescript": "^3.2.2",
+        "vee-validate": "^2.1.5",
         "vue": "^2.5.22",
+        "vue-i18n": "^8.7.0",
+        "vue-moment": "^4.0.0",
         "vue-property-decorator": "^7.3.0",
         "vue-router": "3.0.2",
         "vue-template-compiler": "^2.5.22",
+        "vuetify": "^1.4.1",
         "vuex": "^3.0.1",
         "vuex-module-decorators": "^0.9.7"
     }
