--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@gfx/zopfli": "^1.0.10",
         "browser-sync": "^2.26.3",
         "browser-sync-webpack-plugin": "^2.0.1"
     },
