--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     },
     "dependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+        "@types/jwt-decode": "^2.2.1",
         "@types/node": "^10.12.18",
         "axios": "^0.18.0",
         "compression-webpack-plugin": "^2.0.0",
         "core-js": "^2.6.2",
         "cross-env": "^5.2.0",
         "css-loader": "^2.1.0",
+        "jwt-decode": "github:auth0/jwt-decode",
         "laravel-mix": "^4.0.13",
         "resolve-url-loader": "^3.0.0",
         "sass": "^1.15.2",
