--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,6 @@
         "fideloper/proxy": "^4.0",
         "kyslik/column-sortable": "^5.7",
         "laravel/framework": "5.7.*",
-        "laravel/homestead": "^7.19",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
         "spatie/laravel-permission": "^2.25",
@@ -25,7 +24,8 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "laravel/homestead": "^8"
     },
     "autoload": {
         "classmap": [
