--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,15 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
-        "barryvdh/laravel-ide-helper": "^2.5",
+        "ext-json": "*",
         "doctrine/dbal": "^2.8",
         "fideloper/proxy": "^4.0",
         "kyslik/column-sortable": "^5.7",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
         "spatie/laravel-permission": "^2.25",
         "tucker-eric/eloquentfilter": "^1.3",
-        "tymon/jwt-auth": "^1.0",
-        "ext-json": "*"
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -24,8 +22,10 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
+        "barryvdh/laravel-ide-helper": "^2.5",
         "phpunit/phpunit": "^7.0",
-        "laravel/homestead": "^8"
+        "laravel/homestead": "^8",
+        "laravel/tinker": "^1.0",
     },
     "autoload": {
         "classmap": [
