--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "barryvdh/laravel-ide-helper": "^2.5",
         "phpunit/phpunit": "^7.0",
         "laravel/homestead": "^8",
-        "laravel/tinker": "^1.0",
+        "laravel/tinker": "^1.0"
     },
     "autoload": {
         "classmap": [
