--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "@gfx/zopfli": "^1.0.10",
         "@mdi/font": "^3.3.92",
+        "@types/moment-timezone": "^0.5.10",
         "browser-sync": "^2.26.3",
         "browser-sync-webpack-plugin": "^2.0.1",
         "eslint": "^5.12.0",
@@ -32,6 +33,8 @@
         "css-loader": "^2.1.0",
         "jwt-decode": "github:auth0/jwt-decode",
         "laravel-mix": "^4.0.13",
+        "moment": "^2.24.0",
+        "moment-timezone": "^0.5.23",
         "reflect-metadata": "^0.1.13",
         "resolve-url-loader": "^3.0.0",
         "sass": "^1.15.2",
