--- a/package.json
+++ b/package.json
@@ -11,47 +11,49 @@
     },
     "devDependencies": {
         "@gfx/zopfli": "^1.0.10",
-        "@mdi/font": "^3.3.92",
+        "@mdi/font": "^3.4.93",
         "@types/moment-timezone": "^0.5.10",
         "browser-sync": "^2.26.3",
-        "browser-sync-webpack-plugin": "^2.0.1",
-        "eslint": "^5.12.0",
+        "browser-sync-webpack-plugin": "^2.2.2",
+        "eslint": "^5.13.0",
         "eslint-plugin-vue": "^5.1.0",
+        "imagemin-webpack-plugin": "^2.4.2",
         "material-design-icons-iconfont": "^4.0.4",
         "stylus": "^0.54.5",
-        "stylus-loader": "^3.0.2"
+        "stylus-loader": "^3.0.2",
+        "uglifyjs-webpack-plugin": "^2.1.1"
     },
     "dependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.2.0",
         "@types/jwt-decode": "^2.2.1",
-        "@types/node": "^10.12.18",
+        "@types/node": "^10.12.25",
         "axios": "^0.18.0",
         "class-transformer": "^0.2.0",
         "compression-webpack-plugin": "^2.0.0",
-        "core-js": "^2.6.2",
+        "core-js": "^2.6.4",
         "cross-env": "^5.2.0",
         "css-loader": "^2.1.0",
         "jwt-decode": "github:auth0/jwt-decode",
-        "laravel-mix": "^4.0.13",
+        "laravel-mix": "^4.0.14",
         "moment": "^2.24.0",
         "moment-timezone": "^0.5.23",
         "reflect-metadata": "^0.1.13",
         "resolve-url-loader": "^3.0.0",
-        "sass": "^1.15.2",
+        "sass": "^1.17.0",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.23.1",
         "ts-loader": "^5.3.3",
-        "typescript": "^3.2.2",
-        "vee-validate": "^2.1.5",
-        "vue": "^2.5.22",
-        "vue-i18n": "^8.7.0",
+        "typescript": "^3.3.3",
+        "vee-validate": "^2.1.7",
+        "vue": "^2.6.6",
+        "vue-i18n": "^8.8.1",
         "vue-moment": "^4.0.0",
         "vue-property-decorator": "^7.3.0",
         "vue-router": "3.0.2",
         "vue-style-loader": "^4.1.2",
-        "vue-template-compiler": "^2.5.22",
-        "vuetify": "^1.4.1",
-        "vuex": "^3.0.1",
+        "vue-template-compiler": "^2.6.6",
+        "vuetify": "^1.5.0",
+        "vuex": "^3.1.0",
         "vuex-module-decorators": "^0.9.7"
     }
 }
