--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,10 @@ addons:
 
 services:
   - redis-server
+  - postgresql
 
 before_install:
-  - sudo apt remove mysql-server -y
-  - wget -c https://dev.mysql.com/get/mysql-apt-config_0.8.10-1_all.deb
-  - sudo dpkg -i mysql-apt-config_0.8.10-1_all.deb
-  - sudo apt-get install mysql-server -y
-  - mysql -e 'create database test;'
+  - psql -c 'create database test;' -U postgres
 
 install:
   - cp .env.example .env
