--- a/.travis.yml
+++ b/.travis.yml
@@ -21,15 +21,17 @@ install:
   - cp .env.example .env
   - composer self-update
   - composer install --no-interaction
-  - npm install
   - php artisan key:generate
   - php artisan jwt:secret -f
   - php artisan migrate --seed
+  - npm install
   - npm run prod
 
 after_success:
   - rm -rf node_modules/
-  - rm -rf resources/js
+  - rm -rf resources/js/
+  - rm -rf tests/
+  - rm .env
 
 # branches:
 #  only:
