--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=test
+DB_DATABASE=postgres
 DB_USERNAME=root
 DB_PASSWORD=
 
