--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,13 @@ services:
   - redis-server
   - postgresql
 
+postgres:
+  adapter: postgresql
+  database: test
+  username: postgres
+
 before_install:
+  - composer global require hirak/prestissimo
   - psql -c 'create database test;' -U postgres
 
 install:
