--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,8 @@ LOG_CHANNEL=stack
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=postgres
-DB_USERNAME=root
+DB_DATABASE=test
+DB_USERNAME=postgres
 DB_PASSWORD=
 
 BROADCAST_DRIVER=redis
