--- a/.travis.yml
+++ b/.travis.yml
@@ -52,5 +52,7 @@ deploy:
   bucket: '$ARTIFACTS_BUCKET'
   access_key_id: '$ARTIFACTS_KEY'
   secret_access_key: '$ARTIFACTS_SECRET'
+  region: 'eu-central-1'
   on:
-    branch: 'feature/orders' # master
+    # tags: true
+    branch: 'master'
