--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,23 @@ after_success:
   - rm -rf resources/js/
   - rm -rf tests/
   - rm .env
+  - rm .env.test
+  - rm .babelrc
+  - rm .editorconfig
+  - rm .eslintrc.js
+  - rm .gitattributes
+  - rm .gitignore
+  - rm .travis.yml
+  - rm Vagrantfile
+  - rm after.sh
+  - rm aliases
+  - rm composer.json
+  - rm composer.lock
+  - rm package-lock.json
+  - rm package.json
+  - rm phpunit.xml
+  - rm tsconfig.json
+  - rm webpack.mix.js
 
 # branches:
 #  only:
