--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,6 @@ deploy:
   access_key_id: '$ARTIFACTS_KEY'
   secret_access_key: '$ARTIFACTS_SECRET'
   region: 'eu-central-1'
-  upload-dir: '$UPLOAD_DIR'
+  upload-dir: '$TRAVIS_BRANCH/${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}'
   on:
-    tags: true
     all_branches: true
