--- a/.travis.yml
+++ b/.travis.yml
@@ -57,6 +57,11 @@ notifications:
     on_failure: always
     on_success: never
 
+branches:
+  only:
+    - master
+    - stable
+
 deploy:
   provider: s3
   bucket: '$ARTIFACTS_BUCKET'
