--- a/.travis.yml
+++ b/.travis.yml
@@ -68,6 +68,6 @@ deploy:
   access_key_id: '$ARTIFACTS_KEY'
   secret_access_key: '$ARTIFACTS_SECRET'
   region: 'eu-central-1'
-  upload-dir: '$TRAVIS_BRANCH/${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}'
+  upload-dir: '$TRAVIS_BRANCH/${TRAVIS_TAG:-$(date +"%Y%m%d%H%M%S")-$(git log --format=%h -1)}'
   on:
     all_branches: true
