--- a/.travis.yml
+++ b/.travis.yml
@@ -63,11 +63,19 @@ branches:
     - stable
 
 deploy:
-  provider: s3
-  bucket: '$ARTIFACTS_BUCKET'
-  access_key_id: '$ARTIFACTS_KEY'
-  secret_access_key: '$ARTIFACTS_SECRET'
-  region: 'eu-central-1'
-  upload-dir: '$TRAVIS_BRANCH/${TRAVIS_TAG:-$(date +"%Y%m%d%H%M%S")-$(git log --format=%h -1)}'
-  on:
-    all_branches: true
+  - provider: s3
+    bucket: '$ARTIFACTS_BUCKET'
+    access_key_id: '$ARTIFACTS_KEY'
+    secret_access_key: '$ARTIFACTS_SECRET'
+    region: 'eu-central-1'
+    upload-dir: 'builds/$TRAVIS_BRANCH/${TRAVIS_TAG:-$(date +"%Y%m%d%H%M%S")-$(git log --format=%h -1)}'
+    on:
+      branch: 'dev'
+  - provider: s3
+    bucket: '$ARTIFACTS_BUCKET'
+    access_key_id: '$ARTIFACTS_KEY'
+    secret_access_key: '$ARTIFACTS_SECRET'
+    region: 'eu-central-1'
+    upload-dir: 'builds/$TRAVIS_BRANCH/$TRAVIS_TAG'
+    on:
+      branch: 'master'
