--- a/.travis.yml
+++ b/.travis.yml
@@ -75,8 +75,13 @@ deploy:
     region: 'eu-central-1'
     skip_cleanup: true
     on:
-      tags: true
       branch: 'master'
+  - provider: releases
+    api_key: '$GITHUB_API'
+    file: ${TRAVIS_BUILD_DIR}${REPO}-${BUILD_ENV}-${TRAVIS_TAG}-${TRAVIS_BUILD_NUMBER}.tar.gz
+    skip_cleanup: true
+    on:
+      tags: true
 
 notifications:
   email:
