--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ after_success:
 
 before_deploy:
   - cd ..
-  - tar -zcf $TRAVIS_BUILD_DIR_$TRAVIS_TAG-$TRAVIS_BUILD_NUMBER.tar.gz ${$TRAVIS_BUILD_DIR}
+  - tar -zcf $TRAVIS_BUILD_DIR_$TRAVIS_TAG-$TRAVIS_BUILD_NUMBER.tar.gz $TRAVIS_BUILD_DIR
 
 deploy:
   - provider: s3
