--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ after_success:
   - rm webpack.mix.js
   - .git
   - cd ..
-  - GZIP=-9 tar -zcf $TRAVIS_BUILD_DIR-$TRAVIS_TAG.tar.gz $TRAVIS_BUILD_DIR/*
+  - GZIP=-9 tar -C $TRAVIS_BUILD_DIR -jcvf $TRAVIS_BUILD_DIR-$TRAVIS_TAG.tar.bz2 ./
   - rm -rf $TRAVIS_BUILD_DIR
 
 before_deploy:
@@ -66,7 +66,7 @@ before_deploy:
 deploy:
   - provider: releases
     api_key: '$GITHUB_API'
-    file: '$TRAVIS_BUILD_DIR-$TRAVIS_TAG.tar.gz'
+    file: '$TRAVIS_BUILD_DIR-$TRAVIS_TAG.tar.bz2'
     skip_cleanup: true
     on:
       tags: true
