--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ after_success:
   - rm webpack.mix.js
   - .git
   - cd ..
-  - GZIP=-9 tar -zcvf $TRAVIS_BUILD_DIR $TRAVIS_BUILD_DIR-$TRAVIS_TAG.tar.gz -s $TRAVIS_BUILD_DIR $TRAVIS_BUILD_DIR-$TRAVIS_TAG/*
+  - GZIP=-9 tar -zcvf $TRAVIS_BUILD_DIR $TRAVIS_BUILD_DIR-$TRAVIS_TAG.tar.gz --transform $TRAVIS_BUILD_DIR $TRAVIS_BUILD_DIR-$TRAVIS_TAG/*
   - rm -rf $TRAVIS_BUILD_DIR
 
 before_deploy:
