--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ after_success:
   - rm webpack.mix.js
   - .git
   - cd ..
-  - GZIP=-9 tar -C $TRAVIS_BUILD_DIR -zcvf $TRAVIS_BUILD_DIR-$TRAVIS_TAG.tar.gz * --transform s/./${TRAVIS_BUILD_DIR}-${TRAVIS_TAG}/'
+  - GZIP=-9 tar -C $TRAVIS_BUILD_DIR -zcvf $TRAVIS_BUILD_DIR-$TRAVIS_TAG.tar.gz * --transform s/./${TRAVIS_BUILD_DIR}-${TRAVIS_TAG}/
   - rm -rf $TRAVIS_BUILD_DIR
 
 before_deploy:
